# GrowBuddies

./: .gitignore  LICENSE  README.OG.something  README.md  co2.csv  growbuddy.rst  lightmod_vpd.star  mock_readings.csv  out.txt  output.csv  output.txt  pyproject.toml  remove_version.py  requirements.txt  telegraf.conf  test.py  ziegler-nichols.txt
growbuddiesproject/: MANIFEST.in  README.md  pyproject.toml  pyproject_OG.toml  setupOG.cfg
growbuddiesproject/growbuddies/: PID_calibrate_code copy 2.py  PID_calibrate_code copy.py  PID_code copy.py  PID_code.py  PID_code_new.py  PID_code_old.py  PID_feedback_tester_code.py  __main__.py  calibrate_co2.py  calibrate_dripbuddy.py  climate_regulator.py  co2_data.csv  co2_data_1.csv  co2_tuning_after_1326.csv  common.py  delete_measurements.sh  ez_humidity_adjust.py  getmoisture.py  gogrowbuddies.py  growbuddies_settings.json  gus.py  influxdb_code.py  log_handler.py  logginghandler.py  maintain_vpd.py  manage_climate.py  manage_co2.py  manage_environment.py  manage_vpd copy.py  manage_vpd.py  manage_vpd_new.py  manage_vpd_old.py  mistbuddy OG.py  mistbuddy.py  mistbuddy_code copy.py  mistbuddy_code.py  mistbuddy_code_new.py  mistbuddy_code_old.py  mom_code.py  mqtt_code.py  (+21 more)
growbuddiesproject/growbuddies.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
growbuddiesproject/growbuddies/data/: calibrate_dripbuddy.service  ez_humidity_adjust.service  getmoisture.service  gogrowbuddies.service  maintain_vpd.service  mistbuddy.service  snifferbuddy_storereadings.service
growbuddiesproject/growbuddies/drgrowbuddy/: ExploringCNN.ipynb  bbid.py  check_zipfile_is_legit.py  colors.py  data_preprocessing_learnings.ipynb  drgb_helper_functions.py  drgrowbuddy_0.ipynb  helper_functions.py  pre_processing_image_data_for_drgrowbuddy.ipynb  resize_images.py  transfer_files.py
growbuddiesproject/growbuddies/examples/: snifferbuddy_storereadings copy.py  snifferbuddy_storereadings.py
growbuddiesproject/growbuddies/flux/: test.flux
growbuddiesproject/growbuddies/node-red/: flows.json
growbuddiesproject/growbuddies/service_files/: co2_tuning.csv  debug_logs.service  ez_humidity_adjust.service  manage_climate.service  manage_co2.service  (+5 more)
(+215 files in other folders)
