[build options]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "GrowBuddies"
version = "2022.01"
description = "Buddies to help maximize the growth of plants in your indoor garden."
authors = [{"HappyDay", email = "happydaygrow@gmail.com"}]

[project.urls]
source = https://github.com/solarslurpi/GrowBuddies