[project]
name = "growbuddies"
version = "2023.07.01"
description = "Buddies to help maximize the growth of plants in your indoor garden."
authors = ["happyday.mjohnson@gmail.com"]
readme = "README.md"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project.scripts]
store_readings = "growbuddies.store_readings:main"
manage_vpd = "growbuddies.manage_vpd:main"


[project.urls]
homepage = "https://github.com/solarslurpi/GrowBuddies"
documentation = "https://growbuddies.readthedocs.io/en/latest/index.html"

[tool.black]
line-length = 119

